* cleaned up functionality * renamed booter module to core